# vision-transformer

./: pyproject.toml
vision_transformer/models/: multihead_attention.py  transformer_layer.py  vit.py
